--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.28.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.2",
@@ -27,7 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SET NODE_ENV=production && react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject"
